# kinich-quantum

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  Dockerfile  EXTRACTION_CHECKLIST.md  LICENSE  MANIFEST.in  QML_STATUS.md  README.md  __init__.py  api_server.py  circuit_analyzer.py  cost_calculator.py  coverage.xml  demo_phase3_advanced.py  demo_phase3_quick.py  demo_qml.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  publish.yml  security.yml
adapters/: __init__.py  azure_adapter.py  qiskit_adapter.py  spinq_adapter.py
archive/: AUDIT_REPORT.md  AUDIT_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  PUSH_TO_GITHUB.md  SETUP_COMPLETE.md
blockchain/: __init__.py  belizechain_adapter.py  bridge_types.py  community_tracker.py  contribution_tracker.py  cross_chain_bridge.py  ethereum_bridge.py  polkadot_xcm.py  quantum_indices.py
circuits/: __init__.py
config/: __init__.py
core/: __init__.py  circuit_optimizer.py  job_scheduler.py  jobs.py  production_node.py  quantum_node.py  result_aggregator.py
docs/: API_REFERENCE.md  BLOCKCHAIN_KEYS_GUIDE.md  DEPLOYMENT_GUIDE.md  FEATURES_OVERVIEW.md  HYBRID_WORKFLOW_TUTORIAL.md  QML_ARCHITECTURE_GUIDE.md  QUICKSTART.md
error_mitigation/: __init__.py
examples/: 01_qsvm_vs_classical_svm.py  02_vqnn_training_loop.py  03_feature_map_comparison.py  README.md  blockchain_integration_demo.py  complete_integration_demo.py  production_integration.py  quantum_blockchain_example.py
hybrid/: workflow_orchestrator.py
jobs/: __init__.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
kinich/: __init__.py
monitoring/: __init__.py  resource_tracker.py
optimization/: circuit_validator.py
qml/: __init__.py
qml/classifiers/: __init__.py  qsvm.py  vqc.py
qml/feature_maps/: __init__.py  advanced_maps.py  pauli_feature_map.py  zz_feature_map.py
qml/hybrid/: __init__.py  nawal_bridge.py  torch_connector.py
qml/models/: __init__.py  circuit_qnn.py  qnn.py  variational_qnn.py
qml/training/: __init__.py  losses.py  optimizers.py  trainer.py
qml/utils/: __init__.py  backend_manager.py  circuit_builder.py
queue/: job_scheduler.py
security/: __init__.py  post_quantum_crypto.py  zk_proofs.py
sovereignty/: __init__.py
sql/: init_kinich.sql
storage/: __init__.py  dag_content_addressing.py  quantum_results_store.py  result_retriever.py  storage_proof_generator.py
tests/: __init__.py  conftest.py  test_advanced_qml.py  test_circuit_analysis.py  test_core_jobs.py  test_qml.py  test_quantum_node.py
