[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinich-quantum"
version = "0.1.0"
description = "Hybrid quantum-classical computing orchestration with multi-backend support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BelizeChain Core Team", email = "dev@belizechain.org"}
]
maintainers = [
    {name = "BelizeChain Core Team", email = "dev@belizechain.org"}
]
keywords = [
    "quantum computing",
    "distributed computing",
    "blockchain",
    "azure quantum",
    "ibm quantum",
    "quantum orchestration",
    "hybrid computing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    # Quantum computing frameworks
    "qiskit>=1.2.0",
    "qiskit-aer>=0.15.0",
    "qiskit-ibm-runtime>=0.28.0",
    "azure-quantum>=1.0.0",
    "cirq>=1.4.0",
    "pennylane>=0.38.0",
    
    # Azure cloud integrations
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-storage-blob>=12.23.0",
    
    # Blockchain integration
    "substrate-interface>=1.7.9",
    
    # Scientific computing
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    
    # Configuration & validation
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Logging & observability
    "structlog>=24.4.0",
    "rich>=13.9.0",
    
    # Security & cryptography
    "cryptography>=42.0.4,<43.0.0",
    "pyjwt>=2.8.0",
    
    # Async networking
    "aiohttp>=3.10.0",
    "websockets>=13.1.0",
    
    # Data serialization
    "msgpack>=1.1.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# API server dependencies
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-multipart>=0.0.9",
]

# Monitoring & metrics
monitoring = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

# Advanced quantum backends
advanced = [
    "qiskit-ibm-provider>=0.10.0",
    "qiskit-nature>=0.7.0",
    "qiskit-optimization>=0.6.0",
]

# All optional dependencies
all = [
    "kinich-quantum[dev,server,monitoring,advanced]",
]

[project.urls]
Homepage = "https://github.com/BelizeChain/kinich-quantum"
Documentation = "https://docs.belizechain.org/kinich"
Repository = "https://github.com/BelizeChain/kinich-quantum"
"Bug Tracker" = "https://github.com/BelizeChain/kinich-quantum/issues"
Changelog = "https://github.com/BelizeChain/kinich-quantum/blob/main/CHANGELOG.md"

[project.scripts]
kinich = "kinich.core.quantum_node:main"
kinich-node = "kinich.core.quantum_node:main"
kinich-submit = "kinich.client.job_submitter:main"

[tool.setuptools]
packages = ["kinich"]

[tool.setuptools.package-data]
kinich = ["py.typed", "config/*.yaml"]

# ============================================================================
# Ruff Configuration (Modern linting & formatting)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["kinich", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["kinich"]

# ============================================================================
# MyPy Configuration (Type checking)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "qiskit_aer.*",
    "cirq.*",
    "azure.quantum.*",
    "substrate_interface.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=kinich",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "quantum: marks tests requiring quantum backends",
]
asyncio_mode = "auto"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["kinich"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
